
   * Commands reporting exceptions can now be profiled and still have their
     data correctly dumped to a file. For example, a ``bzr commit`` with
     no changes still reports the operation as pointless but doing so no
     longer throws away the profiling data if this command is run with
     ``--lsprof-file callgrind.out.ci`` say. (Ian Clatworthy)

  API BREAKS:

   * The ``VersionedFile`` interface now allows content checks to be bypassed
     by supplying check_content=False.  This saves nearly 30% of the minimum
     cost to store a version of a file. (Robert Collins)

   * Tree's with bad state such as files with no length or sha will no longer
     be silently accepted by the repository XML serialiser. To serialise
     inventories without such data, pass working=True to write_inventory.
     (Robert Collins)

  INTERNALS:

   * New method on xml serialisers, write_inventory_to_lines, which matches the
     API used by knits for adding content. (Robert Collins)

  TESTING:


bzr 0.91rc2 2007-09-11
======================

   * Replaced incorrect tarball for previous release; a debug statement was left 
     in bzrlib/remote.py.

bzr 0.91rc1 2007-09-11
======================

  CHANGES:

   * The default branch and repository format has changed to 
     ``dirstate-tags``, so tag commands are active by default.
     This format is compatible with Bazaar 0.15 and later.
     This incidentally fixes bug #126141.
     (Martin Pool)

   * ``--quiet`` or ``-q`` is no longer a global option. If present, it
     must now appear after the command name. Scripts doing things like
     ``bzr -q missing`` need to be rewritten as ``bzr missing -q``.
     (Ian Clatworthy)

  FEATURES:

   * New option ``--author`` in ``bzr commit`` to specify the author of the
     change, if it's different from the committer. ``bzr log`` and
     ``bzr annotate`` display the author instead of the committer.
     (Lukáš Lalinský)
