@@ -79,6 +79,7 @@ class TestMerge(TestCaseWithTransport):
         wt1.add('bar')
         wt1.commit('add foobar')
         os.chdir('branch2')
+        import pdb; pdb.set_trace()
         self.run_bzr('merge ../branch1/baz', retcode=3)
         self.run_bzr('merge ../branch1/foo')
         self.failUnlessExists('foo')
