@@ -36,6 +36,11 @@ IN DEVELOPMENT
      longer throws away the profiling data if this command is run with
      ``--lsprof-file callgrind.out.ci`` say. (Ian Clatworthy)
 
+   * Fallback to ftp when paramiko is not installed and sftp can't be used for
+     ``tests/commands`` so that the test suite is still usable without
+     paramiko.
+     (Vincent Ladeuil, #59150)
+
   API BREAKS:
 
    * The ``VersionedFile`` interface now allows content checks to be bypassed
